@@ -26,6 +26,7 @@ XINCDIRS	+= \
 			$(APR)/include \
 			$(APRUTIL)/include \
 			$(AP_WORK)/include \
+			$(STDMOD)/generators \
 			$(AP_WORK)/server/mpm/netware \
 			$(NWOS) \
 			$(EOLIST)
